[package]
name = "todo_app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde={version ="1.0",features=["derive"]}
serde_json="1.0"
thiserror="1.0"

rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = "1.23.1"
[lib]
name="todo_app"
path="src/lib.rs"


